# tensor-playground

./: README.md  pyproject.toml
src/: basics.py  broadcasting.py  operations.py  utils.py
