[tool.poetry]
name = "tensor-playground"
version = "0.1.0"
description = ""
authors = ["Dennis Cui"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^69.1.1"
torch = "^2.2.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
